<resources>
    <string name="app_name">MyJobWallet</string>

    <!-- ADMOB -->
    <string name="adsHome">ca-app-pub-9460579775308491/5030131024</string>
    <string name="adsSpese">ca-app-pub-9460579775308491/1775619596</string>
    <string name="adsNote">ca-app-pub-9460579775308491/9180957587</string>
    <string name="adsEntrate">ca-app-pub-9460579775308491/2783193903</string>
    <string name="adsTurni">ca-app-pub-9460579775308491/6915199974</string>
    <string name="adsInterstitial">ca-app-pub-9460579775308491/9042311077</string>
    <string name="navigation_drawer_open">Apri navigation drawer</string>
    <string name="navigation_drawer_close">Chiudi navigation drawer</string>

    <!-- NOMI SU TOOLBAR -->
    <string name="toolbarSettings">Impostazioni</string>
    <string name="toolbarImpostazioni">Impostazioni</string>
    <string name="toolbarProfile">Profilo</string>
    <string name="toolbarOre">Ore</string>
    <string name="toolbarTurni">Turni</string>
    <string name="toolbarElaborazioni">Elaborazioni</string>
    <string name="toolbarSpese">Spese</string>
    <string name="toolbarSpeseAggiungi">Aggiungi Spese</string>
    <string name="toolbarNote">Note</string>
    <string name="toolbarNoteAggiungi">Aggiungi Nota</string>
    <string name="toolbarCalendario">Calendario</string>
    <string name="toolbarCalcoloPaga">Calcolo Paga</string>
    <string name="toolbarPremium">Premium</string>
    <string name="toolbarEntrate">Entrate</string>
    <string name="toolbarEntrateAggiungi">Aggiungi Entrata</string>
    <string name="toolbarValuta">Convertitore di Valuta</string>
    <string name="toolbarProfileDati">Dati Utente</string>
    <string name="toolbarEmail">Invia Email</string>
    <string name="toolbarInfo">Staf Kubix Studio</string>

    <!-- INTRODUZIONE -->
    <string name="title_activity_welcome">MyJobWallet</string>
    <string name="next">Avanti</string>
    <string name="skip">Salta</string>
    <string name="start">Vai</string>
    <string name="testoSlide1">Benvenuto in MyJobWallet. Un progetto di Kubix Studio</string>
    <string name="testoSlide2">Calcola il tuo stipendio in modo facile e veloce</string>
    <string name="testoSlide3">Gestisci tutte le tue entrate/uscite economiche</string>
    <string name="testoSlide4">Scrivi le tue Note con Testi e Immagini. Potrai anche inserire una notifica come promemoria</string>
    <string name="testoSlide5">Converti tutte le valute del Mondo</string>

    <!-- MENU EMAIL -->
    <string name="emailTitolo">Invia Email a Kubix Studio</string>
    <string name="email">studio.kubix@gmail.com</string>
    <string name="emailOggetto">MyJobWallet</string>
    <string name="emailTesto">Ciao Kubix Studio....</string>
    <string name="scrivi_email">Scrivi Email</string>
    <string name="hai_un_problema">Hai un problema?</string>
    <string name="hai_una_richiesta">Hai una richiesta?</string>
    <string name="inviaci_una_email">Inviaci una Email!</string>

    <!-- MENU NOTE -->
    <string name="aggiungi_nota">Clicca sul pulsante qui sotto per aggiungere una Nota</string>
    <string name="nota">Nota</string>
    <string name="titolo">Titolo</string>
    <string name="salva">Salva</string>
    <string name="aggiungi_immagine">Aggiungi Immagine</string>
    <string name="nota_inserita">Nota inserita correttamente</string>
    <string name="dati_nota">Inserire tutti i dati per la nota.</string>

    <!-- MENU PREMIUM -->
    <string name="versione_premium">Versione Premium</string>
    <string name="rimuovi_pubblicita">- Rimuovi pubblicità</string>
    <string name="calcola_stipendio">- Calcola stipendio</string>
    <string name="cambia_tema_premium">- Cambia Tema</string>
    <string name="aggiungi_widget">- Aggiungi Widget</string>
    <string name="acquista">Acquista</string>
    <string name="ripristina_acquisto">Ripristina Acquisto</string>

    <!-- MENU PROFILO -->
    <string name="nome_profilo">Nome</string>
    <string name="email_profilo">Email@email.com</string>
    <string name="accedi_con_google">Accedi con Google</string>
    <string name="accedi_con_facebook">Accedi con Facebook</string>
    <string name="imposta_dati">Imposta Dati</string>
    <string name="ore_lavorative">Ore lavorative</string>
    <string name="paga_oraria">Paga Oraria</string>
    <string name="straordinari">Straordinari</string>
    <string name="valutaMondiale">Valuta</string>
    <string name="salva_dati_profilo">SALVA DATI PROFILO</string>

    <!-- MENU SPESE -->
    <string name="testo_aggiungi_spesa">Clicca sul pulsante qui sotto per aggiungere una spesa</string>
    <string name="titolo_spesa">Titolo</string>
    <string name="spesaAggiunta">Spesa aggiunta correttamente.</string>
    <string name="compilareDatiSpesa">Compilare tutti i dati per inserire questa spesa</string>
    <string name="noSpeseAggiunte">Nessuna spesa aggiunta</string>

    <!-- MENU ENTRATE -->
    <string name="testo_aggiungi_entrata">Clicca il pulsante qui sotto per aggiungere una Entrta</string>
    <string name="entrataAggiunta">Entrata aggiunta correttamente.</string>
    <string name="compilareDatiEntrata">Compilare tutti i dati per inserire questa entrata</string>
    <string name="noEntrateAggiunte">Nessuna entrata aggiunta</string>

    <!-- HOME -->
    <string name="card_ore">Ore</string>
    <string name="card_turni">Turni</string>
    <string name="card_spese">Spese</string>
    <string name="card_entrata">Entrate</string>
    <string name="card_note">Note</string>
    <string name="card_valuta">Valuta</string>
    <string name="somma_entrate">Entrate</string>
    <string name="somma_uscite">Uscite</string>

    <!-- GENERALE -->
    <string name="funzioneConAggiornamento">Questa funzione verrà implementata con i prossimi aggiornamenti</string>
    <string name="uscita_turno">USCITA INSERITA</string>
    <string name="entrata_turno">ENTRATA INSERITA</string>
    <string name="inserire_uscita">INSERISCI L\'ENTRATA</string>
    <string name="giorno_riposo">RIPOSO INSERITO</string>
    <string name="elaborazione">Elaborazione</string>
    <string name="calcolo_straordinari">Calcolo straordinari</string>
    <string name="calcolo_paga">Calcolo paga</string>
    <string name="in_servizio">IN SERVIZIO</string>
    <string name="turno_esistente">INSERIRE L\'USCITA</string>
    <string name="nessun_turno">NESSUN TURNO INSERITO</string>
    <string name="elimina_turno">ELIMINA TURNO</string>
    <string name="verra_eliminato">ELIMINARE?</string>
    <string name="si_elimina">SI, ELIMINA</string>
    <string name="servizio">IN SERVIZIO</string>
    <string name="turno_rimosso">TURNO RIMOSSO CON SUCCESSO</string>
    <string name="riposo">RIPOSO</string>
    <string name="rimosso_turno">TURNO RIMOSSO</string>
    <string name="non_eliminare">NON ELIMINARE</string>
    <string name="rimuoviRiposo">RIPOSO ELIMINATO CON SUCCESSO</string>

    <!-- SPINNER PEIORITA -->
    <string name="bassa">Bassa</string>
    <string name="media">Media</string>
    <string name="alta">Alta</string>

    <!-- SPINNER ENTRATE -->
    <string name="bonifico">Bonifico</string>
    <string name="assegno">Assegno</string>
    <string name="vincita">Vincita</string>
    <string name="regalo">Regalo</string>
    <string name="beni">Beni</string>
    <string name="rimborsi">Rimborsi</string>
    <string name="vendite">Vendite</string>

    <string name="seleziona_categoria">Seleziona la categoria da visualizzare</string>
    <string name="tutto">Tutte le categorie</string>

    <!-- SPINNER SPESE -->
    <string name="casa">Casa</string>
    <string name="trasporti">Trasporti</string>
    <string name="auto">Auto</string>
    <string name="carburante">Carburante</string>
    <string name="bollette">Bollette</string>
    <string name="shopping">Shopping</string>
    <string name="ciboBevande"><![CDATA[Cibo & Bevande]]></string>
    <string name="svago">Svago</string>
    <string name="viaggi">Viaggi</string>
    <string name="altro">Altro</string>


    <!-- SPINNER MESI -->
    <string name="gennaio">Gennaio</string>
    <string name="febbraio">Febbraio</string>
    <string name="marzo">Marzo</string>
    <string name="aprile">Aprile</string>
    <string name="maggio">Maggio</string>
    <string name="giugno">Giugno</string>
    <string name="luglio">Luglio</string>
    <string name="agosto">Agosto</string>
    <string name="settembre">Settembre</string>
    <string name="ottobre">Ottobre</string>
    <string name="novembre">Novembre</string>
    <string name="dicembre">Dicembre</string>

    <!-- DRAWER MENU -->
    <string name="drawer_valuta">Valuta App</string>
    <string name="drawer_impostazioni">Impostazioni</string>
    <string name="drawer_premium">Premium</string>
    <string name="drawer_profilo">Profilo</string>
    <string name="drawer_email">Email</string>
    <string name="drawer_googleplus">Kubix su Google+</string>

    <!-- IMPOSTAZIONI -->
    <string name="tema_titolo_tema">Tema</string>
    <string name="tema_titolo_dark_tema">Tema Dark</string>
    <string name="tema_sommario_tema">Cambia dal tema Light al tema Dark</string>
    <string name="tema_titolo_cambia_tema">Cambia Tema</string>
    <string name="tema_sommario_icone_tema">Cambia le Icone del Tema</string>
    <string name="notifica_titolo_notifiche">Notifiche</string>
    <string name="notifica_titolo_note">Note</string>
    <string name="notifica_sommario_note">Ricevi una notifica per le Note</string>
    <string name="notifica_titolo_spese">Spese</string>
    <string name="notifica_sommario_spese">Ricevi una notifiche per le Spese</string>
    <string name="notifica_titolo_suono">Imposta suoneria</string>
    <string name="notifica_titolo_vibrazione">Vibrazione</string>
    <string name="notifica_sommario_vibrazione">Attiva o disattiva la Vibrazione</string>
    <string name="info_titolo_info">Info</string>
    <string name="backup_title_backup">Backup</string>
    <string name="backup_titolo_salva">Crea Backup</string>
    <string name="backup_sommario_salva">Salva il Backup nel Dispositivo</string>
    <string name="backup_titolo_carica">Carica Backup</string>
    <string name="backup_sommario_carica">Carica il Backup dal Dispositivo</string>



    <string name="compilaDatiPerInserimentoTurno">Compila dati</string>
    <string name="imposta_entrata">Imposta Entrata</string>
    <string name="imposta_uscita">Imposta Uscita</string>
    <string name="cambia_layout_home">Cambia Layout</string>


</resources>
