<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/titoloCategoria"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp"
        android:paddingLeft="16dp"
        android:paddingTop="8dp"
        android:text="@string/seleziona_categoria"
        tools:ignore="HardcodedText,RtlSymmetry" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dp">

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dp"
            app:srcCompat="@drawable/ic_btnsheet_entrate_bonifico"
            tools:ignore="RtlHardcoded" />

        <Button
            android:id="@+id/btnTagBonifico"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="72dp"
            android:layout_marginRight="16dp"
            android:text="@string/bonifico"
            android:textAlignment="textStart"
            android:textColor="@color/testoTitolo" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dp">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dp"
            app:srcCompat="@drawable/ic_btnsheet_entrate_assegno"
            tools:ignore="RtlHardcoded" />

        <Button
            android:id="@+id/btnTagAssegno"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="72dp"
            android:layout_marginRight="16dp"
            android:text="@string/assegno"
            android:textAlignment="textStart"
            android:textColor="@color/testoTitolo" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dp">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dp"
            app:srcCompat="@drawable/ic_btnsheet_entrate_vincita" />

        <Button
            android:id="@+id/btnTagVincita"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="72dp"
            android:layout_marginRight="16dp"
            android:text="@string/vincita"
            android:textAlignment="textStart"
            android:textColor="@color/testoTitolo" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dp">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dp"
            app:srcCompat="@drawable/ic_btnsheet_entrate_regalo" />

        <Button
            android:id="@+id/btnTagRegalo"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="72dp"
            android:layout_marginRight="16dp"
            android:text="@string/regalo"
            android:textAlignment="textStart"
            android:textColor="@color/testoTitolo" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dp">

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dp"
            app:srcCompat="@drawable/ic_btnsheet_entrate_beni" />

        <Button
            android:id="@+id/btnTagBeni"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="72dp"
            android:layout_marginRight="16dp"
            android:text="@string/beni"
            android:textAlignment="textStart"
            android:textColor="@color/testoTitolo" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dp">

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dp"
            app:srcCompat="@drawable/ic_btnsheet_entrate_rimborsi" />

        <Button
            android:id="@+id/btnTagRimborsi"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="72dp"
            android:layout_marginRight="16dp"
            android:text="@string/rimborsi"
            android:textAlignment="textStart"
            android:textColor="@color/testoTitolo" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dp">

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dp"
            app:srcCompat="@drawable/ic_btnsheet_entrate_vendite" />

        <Button
            android:id="@+id/btnTagVendite"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="72dp"
            android:layout_marginRight="16dp"
            android:text="@string/vendite"
            android:textAlignment="textStart"
            android:textColor="@color/testoTitolo" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dp">

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dp"
            app:srcCompat="@drawable/ic_btnsheet_spese_altro" />

        <Button
            android:id="@+id/btnTagAltro"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="72dp"
            android:layout_marginRight="16dp"
            android:text="@string/altro"
            android:textAlignment="textStart"
            android:textColor="@color/testoTitolo" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/iconeLayout" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dp">

        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dp"
            app:srcCompat="@drawable/ic_btnsheet_spese_tutte" />

        <Button
            android:id="@+id/btnTagTutteEntrate"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="72dp"
            android:layout_marginRight="16dp"
            android:text="@string/tutto"
            android:textAlignment="textStart"
            android:textColor="@color/testoTitolo" />
    </RelativeLayout>

</LinearLayout>