<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/titoloCategoria"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp"
        android:paddingLeft="16dp"
        android:paddingTop="8dp"
        android:text="@string/seleziona_categoria"
        android:textAppearance="@android:style/TextAppearance.Material.Title"
        android:textColor="@color/testoTitolo"
        android:textSize="14sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp">

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dp"
            app:srcCompat="@drawable/ic_btnsheet_spese_casa" />

        <Button
            android:id="@+id/btnTagCasa"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="72dp"
            android:layout_marginRight="16dp"
            android:text="@string/casa"
            android:textAlignment="viewStart"
            android:textAppearance="@android:style/TextAppearance.Material.Medium"
            android:textSize="14sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dp"
            app:srcCompat="@drawable/ic_btnsheet_spese_trasporti" />

        <Button
            android:id="@+id/btnTagTrasporti"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="72dp"
            android:layout_marginRight="16dp"
            android:text="@string/trasporti"
            android:textAlignment="viewStart"
            android:textAppearance="@android:style/TextAppearance.Material.Medium"
            android:textSize="14sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dp"
            app:srcCompat="@drawable/ic_btnsheet_spese_auto" />

        <Button
            android:id="@+id/btnTagAuto"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="72dp"
            android:layout_marginRight="16dp"
            android:text="@string/auto"
            android:textAlignment="viewStart"
            android:textAppearance="@android:style/TextAppearance.Material.Medium"
            android:textSize="14sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dp"
            app:srcCompat="@drawable/ic_btnsheet_spese_carburante" />

        <Button
            android:id="@+id/btnTagCarburante"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="72dp"
            android:layout_marginRight="16dp"
            android:text="@string/carburante"
            android:textAlignment="viewStart"
            android:textAppearance="@android:style/TextAppearance.Material.Medium"
            android:textSize="14sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp">

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dp"
            app:srcCompat="@drawable/ic_btnsheet_spese_bollette" />

        <Button
            android:id="@+id/btnTagBollette"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="72dp"
            android:layout_marginRight="16dp"
            android:text="@string/bollette"
            android:textAlignment="viewStart"
            android:textAppearance="@android:style/TextAppearance.Material.Medium"
            android:textSize="14sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp">

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dp"
            app:srcCompat="@drawable/ic_btnsheet_spese_shopping" />

        <Button
            android:id="@+id/btnTagShopping"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="72dp"
            android:layout_marginRight="16dp"
            android:text="@string/shopping"
            android:textAlignment="viewStart"
            android:textAppearance="@android:style/TextAppearance.Material.Medium"
            android:textSize="14sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp">

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginLeft="16dp"
            app:srcCompat="@drawable/ic_btnsheet_spese_cibo"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true"
            android:layout_marginStart="16dp" />

        <Button
            android:id="@+id/btnTagCiboBevande"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="72dp"
            android:layout_marginRight="16dp"
            android:text="@string/ciboBevande"
            android:textAlignment="viewStart"
            android:textAppearance="@android:style/TextAppearance.Material.Medium"
            android:textSize="14sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp">

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dp"
            app:srcCompat="@drawable/ic_btnsheet_spese_svago" />

        <Button
            android:id="@+id/btnTagSvago"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="72dp"
            android:layout_marginRight="16dp"
            android:text="@string/svago"
            android:textAlignment="viewStart"
            android:textAppearance="@android:style/TextAppearance.Material.Medium"
            android:textSize="14sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp">

        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dp"
            app:srcCompat="@drawable/ic_btnsheet_spese_viaggi" />

        <Button
            android:id="@+id/btnTagViaggi"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="72dp"
            android:layout_marginRight="16dp"
            android:text="@string/viaggi"
            android:textAlignment="viewStart"
            android:textAppearance="@android:style/TextAppearance.Material.Medium"
            android:textSize="14sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp">

        <ImageView
            android:id="@+id/imageView10"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dp"
            app:srcCompat="@drawable/ic_btnsheet_spese_altro" />

        <Button
            android:id="@+id/btnTagAltro"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="72dp"
            android:layout_marginRight="16dp"
            android:text="@string/altro"
            android:textAlignment="viewStart"
            android:textAppearance="@android:style/TextAppearance.Material.Medium"
            android:textSize="14sp" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/iconeLayout" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="8dp">

        <ImageView
            android:id="@+id/imageView11"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dp"
            app:srcCompat="@drawable/ic_btnsheet_spese_tutte" />

        <Button
            android:id="@+id/btnTagTutteSpese"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="72dp"
            android:layout_marginRight="16dp"
            android:text="@string/tutto"
            android:textAlignment="viewStart"
            android:textAppearance="@android:style/TextAppearance.Material.Medium"
            android:textSize="14sp" />
    </RelativeLayout>

</LinearLayout>